[package]
name = "chiefliquidity-integration-tests"
version = "0.1.0"
edition = "2021"
description = "Integration tests for chiefliquidity (separate workspace so dev-deps don't pollute the deployable program's lockfile)"
license = "MIT"
publish = false

# Empty workspace table: explicitly opt out of the parent workspace at
# /Users/magicaltux/projects/chiefliquidity/Cargo.toml so this crate has
# its own resolved dep graph + Cargo.lock, isolated from solana-verify.
[workspace]

[dependencies]
chiefliquidity = { path = "../programs/chiefliquidity", features = ["no-entrypoint"] }
solana-program = "2.0"
spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }
borsh = "1.5"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
spl-associated-token-account = "4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
