[package]
name = "chiefliquidity"
version = "0.1.0"
edition = "2021"
description = "Liquidation-aware AMM lending protocol on Solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "2.0"
spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }
borsh = "1.5"
uint = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"
solana-security-txt = "1.1"

[dev-dependencies]
solana-program-test = "2.0"
solana-sdk = "2.0"
spl-associated-token-account = "4.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
