[package]
name = "chiefliquidity"
version = "0.1.0"
edition = "2021"
description = "Liquidation-aware AMM lending protocol on Solana"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []
custom-heap = []
custom-panic = []

[dependencies]
solana-program = "2.0"
spl-token-2022 = { version = "5.0", features = ["no-entrypoint"] }
borsh = "1.5"
uint = "0.10"
bytemuck = { version = "1.14", features = ["derive"] }
thiserror = "1.0"
solana-security-txt = "1.1"

# dev-dependencies are deliberately empty here. Integration tests live in
# ../../integration-tests/ as a SEPARATE cargo project (not in the main
# workspace) so their heavy deps (solana-program-test → solana-svm → ...)
# don't end up in this crate's Cargo.lock — solana-verify's docker
# container ships cargo 1.78, which can't parse modern transitive deps
# that require edition2024.
